<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailItemFragment">


    <ImageView
        android:id="@+id/ivEquipo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:background="@color/black"/>

    <TextView android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Prendas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvEquipoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toTopOf="@+id/ivEquipo"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView android:id="@+id/tvEquipoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="C.P Company"/>

    <TextView android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/marca"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvEquipoLiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@+id/tvEquipoName"/>

    <TextView android:id="@+id/tvEquipoLiga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@+id/textView" tools:text="C.P Company"/>

    <TextView android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Descripcion"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvEquipoEstadio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@+id/tvEquipoLiga"/>

    <TextView
        android:id="@+id/tvEquipoEstadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="M" />

    <Button
        android:id="@+id/buttonVolv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        style="@style/AppButtonStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregarComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/comentario"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="128dp"
        android:contentDescription="@string/agregar_comentario_desc"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>